--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@hookform/error-message": "^2.0.0",
     "@material-ui/core": "^5.0.0-beta.5",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.18.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
